...
        android:layout_marginTop="48dp"
        app:layout_constraintTop_toBottomOf="@+id/primbusiness"
        tools:layout_editor_absoluteX="0dp" />

	
    <Button
        android:id="@+id/submitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Create Contact"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/email"
        android:layout_marginRight="8dp"
...
